<resources>
    <string name="app_name">NewsApp</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_favorite">Favorite</string>

    <!-- error -->
    <string name="error_general">Something went wrong!</string>
    <string name="error_general_input">Please check your inputs!</string>
    <string name="text_validation_success">Validation is successful</string>
    <string name="text_validation_error_empty_field">Cannot be empty</string>
    <string name="text_validation_error_email">Email is not valid</string>
    <string name="text_validation_error_password">Password must contain at least 1 special character and 6 characters</string>
    <string name="text_validation_error_phone">Phone is not valid</string>
    <string name="login_invalid_error">Error on authentication values</string>

    <!-- homeFragment -->
    <string name="title_homeFragment">Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- settingFragment -->
    <string name="button_profile_settingFragment">Profile</string>

    <!-- profileFragment -->
    <string name="user_display_name_hint_profileFragment">Name</string>
    <string name="user_email_hint_profileFragment">Email</string>

    <!-- profileBottomSheetFragment -->
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <!-- loginFragment -->
    <string name="title_loginFragment">Login</string>
    <string name="signup_button_loginFragment">Signup</string>
    <string name="hint_username_loginFragment">Username</string>
    <string name="hint_password_loginFragment">Password</string>
    <string name="other_login_loginFragment">or login with</string>
    <string name="facebook_loginFragment">Facebook</string>
    <string name="google_loginFragment">Gmail</string>
    <!-- loginFragment -->
    <string name="title_registerFragment">Register</string>
    <string name="hint_username_registerFragment">Username</string>
    <string name="hint_password_registerFragment">Password</string>
    <!-- registerFragment -->
    <string name="successful_registration">Successful registration</string>
    <string name="unsuccessful_registration">Please try again</string>
    <!-- headlineFragment -->
    <string name="news">news</string>
    <string name="sport">sport</string>
    <string name="tech">tech</string>
    <string name="world">world</string>
    <string name="finance">finance</string>
    <string name="politics">politics</string>
    <string name="business">business</string>
    <string name="economics">economics</string>
    <string name="entertainment">entertainment</string>
    <string name="beauty">beauty</string>
    <string name="travel">travel</string>
    <string name="music">music</string>
    <string name="food">food</string>
    <string name="science">science</string>
    <string name="gaming">gaming</string>
    <string name="energy">energy</string>
    <string-array name="headlineSources">
        <item>@string/news</item>
        <item>@string/sport</item>
        <item>@string/tech</item>
        <item>@string/world</item>
        <item>@string/finance</item>
        <item>@string/politics</item>
        <item>@string/business</item>
        <item>@string/economics</item>
        <item>@string/entertainment</item>
        <item>@string/beauty</item>
        <item>@string/travel</item>
        <item>@string/music</item>
        <item>@string/food</item>
        <item>@string/science</item>
        <item>@string/gaming</item>
        <item>@string/energy</item>
    </string-array>
</resources>