<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.register.RegisterFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_back_login"
        android:scaleType="centerCrop"
        android:src="@drawable/login"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="250dp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:background="@null"
        app:cardElevation="@dimen/elevation_10"
        app:layout_constraintTop_toTopOf="@id/guideline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="@dimen/padding_10">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/register_text"
                style="@style/Header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/title_registerFragment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_register"
                style="@style/EditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username_registerFragment"
                app:boxStrokeWidth="0dp"
                app:layout_constraintTop_toBottomOf="@id/register_text"
                app:startIconDrawable="@drawable/ic_baseline_login_24"
                app:startIconTint="@color/black_600">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_login"
                style="@style/EditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password_loginFragment"
                app:boxStrokeWidth="0dp"
                app:layout_constraintTop_toBottomOf="@id/username_register"
                app:startIconDrawable="@drawable/ic_baseline_password_24"
                app:startIconTint="@color/black_600">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_login"
                style="@style/EditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="phone"
                app:boxStrokeWidth="0dp"
                app:layout_constraintTop_toBottomOf="@id/password_login"
                app:startIconDrawable="@drawable/ic_baseline_password_24"
                app:startIconTint="@color/black_600">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_registerFragment"
                app:icon="@drawable/ic_baseline_navigate_next_24"
                android:layout_marginVertical="@dimen/margin_16"
                app:layout_constraintTop_toBottomOf="@id/phone_login"
                app:layout_constraintEnd_toEndOf="parent"
                android:enabled="false"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/other_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other_login_loginFragment"
        style="@style/Subheader4"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/facebook_login"
        android:layout_marginBottom="@dimen/margin_16"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/facebook_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook_loginFragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/twitter_login"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margin_16"
        app:cornerRadius="@dimen/radius_50"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/twitter_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twitter_loginFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/facebook_login"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margin_16"
        app:cornerRadius="@dimen/radius_50"
        />

</androidx.constraintlayout.widget.ConstraintLayout>