<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/fixed_40_dp">

        <!--        <com.airbnb.lottie.LottieAnimationView-->
        <!--            android:layout_width="@dimen/fixed_150_dp"-->
        <!--            android:layout_height="@dimen/fixed_150_dp"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintStart_toEndOf="parent"-->
        <!--            android:layout_marginTop="@dimen/fi¬xed_8_dp"-->
        <!--            app:lottie_rawRes="@raw/loginsignup" />-->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="@dimen/fixed_300_dp"
            android:layout_height="@dimen/fixed_300_dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/fixed_8_dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loginsignup" />


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16"
            app:cardBackgroundColor="@color/white"
            app:cardElevation="@dimen/elevation_10">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_10">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/login_text"
                    style="@style/Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_loginFragment"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/signup_text"
                    style="@style/Subheader4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_button_loginFragment"
                    app:layout_constraintBottom_toBottomOf="@id/login_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/login_text" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_login"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/login_text"
                    app:startIconDrawable="@drawable/ic_baseline_login_24"
                    app:startIconTint="@color/black_600">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/username"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_username_loginFragment"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_login"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    app:counterEnabled="true"
                    app:counterMaxLength="6"
                    app:layout_constraintTop_toBottomOf="@id/username_login"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_password_24"
                    app:startIconTint="@color/black_600">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_password_loginFragment"
                        android:maxLength="6"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.mahdavi.newsapp.utils.widgets.ProgressButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password_login"
                    app:pb_text="@string/title_loginFragment" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</ScrollView>
